Overflow alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 #root {
   /* margin: 0 auto;
   text-align: center; */
-  position: absolute;
-  top: 0;
-  left: 0;
   min-width: 100vw;
   min-height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .App {
